--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,12 @@
     <artifactId>jjwt</artifactId>
     <version>0.9.1</version>
 </dependency>
+		<!-- https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-ui -->
+<dependency>
+    <groupId>org.springdoc</groupId>
+    <artifactId>springdoc-openapi-ui</artifactId>
+    <version>1.6.12</version>
+</dependency>
 		
 		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security -->
 <dependency>
